--- a/article3.html
+++ b/article3.html
@@ -3,28 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Інвестування для початківців</title>
-  <link rel="stylesheet" href="style.css?v=2">
+  <title>Створення фінансової подушки</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>Інвестування для початківців</h1>
-      <nav>
-        <a href="index.html">🏠 На головну</a>
-      </nav>
+      <h1>Створення фінансової подушки</h1>
+      <nav><a href="index.html">🏠 На головну</a></nav>
     </header>
-
     <main>
-      <img src="https://images.unsplash.com/photo-1649972904349-432c86a20b59" alt="Інвестиції">
       <article>
-        <p>Інвестування допомагає створювати пасивний дохід та накопичувати капітал.</p>
+        <img src="https://images.unsplash.com/photo-1580910051073-b1a0c3b3e6f1?ixlib=rb-4.0.3&auto=format&fit=crop&w=900&q=80" alt="Фінансова подушка">
+        <p>Фінансова подушка — це запас грошей на випадок непередбачених ситуацій, який допомагає почуватися спокійно.</p>
         <ul>
-          <li>📖 Вивчайте ринок та інструменти інвестування.</li>
-          <li>📈 Починайте з малих сум, щоб знизити ризики.</li>
-          <li>💼 Диверсифікуйте портфель інвестицій.</li>
+          <li>💰 Відкладай щонайменше 10% доходу щомісяця.</li>
+          <li>🏦 Зберігай гроші на окремому рахунку.</li>
+          <li>📆 Мета — накопичити суму на 3-6 місяців витрат.</li>
         </ul>
-        <p>Кожен може почати інвестувати, навіть маючи невеликий капітал.</p>
       </article>
     </main>
   </div>
