--- a/article4.html
+++ b/article4.html
@@ -3,28 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Створення фінансової подушки</title>
-  <link rel="stylesheet" href="style.css?v=2">
+  <title>Інвестування для початківців</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>Створення фінансової подушки</h1>
-      <nav>
-        <a href="index.html">🏠 На головну</a>
-      </nav>
+      <h1>Інвестування для початківців</h1>
+      <nav><a href="index.html">🏠 На головну</a></nav>
     </header>
-
     <main>
-      <img src="https://images.unsplash.com/photo-1620321682843-78c70a0a5c79" alt="Фінансова подушка">
       <article>
-        <p>Фінансова подушка — це резерв коштів на непередбачувані ситуації.</p>
+        <img src="https://images.unsplash.com/photo-1523289333742-be1143f6b766?ixlib=rb-4.0.3&auto=format&fit=crop&w=900&q=80" alt="Інвестування">
+        <p>Інвестування допомагає створити пасивний дохід та збільшити капітал навіть з невеликими стартовими сумами.</p>
         <ul>
-          <li>💵 Відкладай мінімум 10% від доходу щомісяця.</li>
-          <li>🏦 Тримай гроші на окремому рахунку.</li>
-          <li>📆 Мета — накопичити суму на 3-6 місяців витрат.</li>
+          <li>📖 Вивчай ринок і інвестиційні інструменти.</li>
+          <li>📊 Починай з малих сум, щоб знизити ризики.</li>
+          <li>💼 Диверсифікуй портфель інвестицій.</li>
         </ul>
-        <p>Наявність подушки безпеки забезпечить спокій у кризових ситуаціях.</p>
       </article>
     </main>
   </div>
