--- a/article5.html
+++ b/article5.html
@@ -3,28 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Як уникнути фінансових боргів</title>
-  <link rel="stylesheet" href="style.css?v=2">
+  <title>Топ поради для економії грошей</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>Як уникнути фінансових боргів</h1>
-      <nav>
-        <a href="index.html">🏠 На головну</a>
-      </nav>
+      <h1>Топ поради для економії грошей</h1>
+      <nav><a href="index.html">🏠 На головну</a></nav>
     </header>
-
     <main>
-      <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5" alt="Фінансові борги">
       <article>
-        <p>Борги можуть призвести до фінансових труднощів, тому важливо вчасно вживати заходів.</p>
+        <img src="https://images.unsplash.com/photo-1556742526-795a8eacaa2c?ixlib=rb-4.0.3&auto=format&fit=crop&w=900&q=80" alt="Економія грошей">
+        <p>Економія грошей — це не про обмеження, а про грамотне використання ресурсів і фінансову свободу.</p>
         <ul>
-          <li>📜 Складай план погашення боргів.</li>
-          <li>💳 Уникай використання кредитів для повсякденних витрат.</li>
-          <li>📝 Веди облік своїх фінансів.</li>
+          <li>🛒 Купуй тільки те, що дійсно потрібно.</li>
+          <li>📅 Плануй покупки і складай список перед походом у магазин.</li>
+          <li>🔍 Порівнюй ціни та користуйся акціями.</li>
         </ul>
-        <p>Фінансова дисципліна допоможе уникнути нових боргів і швидше вийти з існуючих.</p>
       </article>
     </main>
   </div>
