--- a/index.html
+++ b/index.html
@@ -3,53 +3,56 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Фінансові поради</title>
+  <title>Фінансовий блог</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>Фінансові поради</h1>
-      <p>Корисні статті для розвитку фінансової грамотності</p>
+      <h1>💰 Фінансовий блог</h1>
+      <p>Корисні статті про фінанси, економію та інвестиції</p>
     </header>
 
-    <main>
-      <section class="articles">
-        <article>
-          <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5" alt="Фінансова грамотність">
-          <h2>Фінансова грамотність</h2>
-          <p>Навчіться ефективно керувати власними фінансами та досягайте стабільності.</p>
-          <a href="article1.html" class="btn">Читати</a>
-        </article>
+    <main class="cards">
+      <!-- Стаття 1 -->
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1522206024047-9c9254216759" alt="Фінансова грамотність">
+        <h2>Фінансова грамотність</h2>
+        <p>Навчіться керувати бюджетом та досягати фінансової незалежності.</p>
+        <a href="article1.html" class="read-more">Читати</a>
+      </div>
 
-        <article>
-          <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f" alt="Планування бюджету">
-          <h2>Як планувати бюджет ефективно</h2>
-          <p>Поради для тих, хто хоче контролювати витрати та збільшити заощадження.</p>
-          <a href="article2.html" class="btn">Читати</a>
-        </article>
+      <!-- Стаття 2 -->
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5" alt="Бюджет">
+        <h2>Як планувати бюджет ефективно</h2>
+        <p>Поради для тих, хто хоче контролювати витрати та збільшити заощадження.</p>
+        <a href="article2.html" class="read-more">Читати</a>
+      </div>
 
-        <article>
-          <img src="https://images.unsplash.com/photo-1604014237744-0d7b4eec91e5" alt="Інвестування">
-          <h2>Інвестування для початківців</h2>
-          <p>З чого почати інвестування та як уникнути ризиків на старті.</p>
-          <a href="article3.html" class="btn">Читати</a>
-        </article>
+      <!-- Стаття 3 -->
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0" alt="Інвестиції">
+        <h2>Інвестування для початківців</h2>
+        <p>Перші кроки у світі інвестицій. Почни з малого!</p>
+        <a href="article3.html" class="read-more">Читати</a>
+      </div>
 
-        <article>
-          <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f" alt="Пасивний дохід">
-          <h2>Створення пасивного доходу</h2>
-          <p>Джерела пасивного доходу та як їх побудувати.</p>
-          <a href="article4.html" class="btn">Читати</a>
-        </article>
+      <!-- Стаття 4 -->
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1604594849809-dfedbc827105" alt="Фінансова подушка">
+        <h2>Створення фінансової подушки</h2>
+        <p>Чому важливо мати резерв коштів та як його створити.</p>
+        <a href="article4.html" class="read-more">Читати</a>
+      </div>
 
-        <article>
-          <img src="https://images.unsplash.com/photo-1508385082359-f38ae991e8f2" alt="Економія грошей">
-          <h2>Топ поради для економії грошей</h2>
-          <p>Прості та дієві поради для оптимізації витрат.</p>
-          <a href="article5.html" class="btn">Читати</a>
-        </article>
-      </section>
+      <!-- Стаття 5 -->
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1581092787761-8a2d3abfa4f2" alt="Економія">
+        <h2>Топ поради для економії грошей</h2>
+        <p>Лайфхаки для розумної економії без втрати комфорту.</p>
+        <a href="article5.html" class="read-more">Читати</a>
+      </div>
     </main>
   </div>
 </body>
