--- a/index.html
+++ b/index.html
@@ -10,47 +10,42 @@
   <div class="container">
     <header>
       <h1>💰 Фінансовий блог</h1>
-      <p>Корисні статті про фінанси, економію та інвестиції</p>
+      <p>Практичні поради про гроші, економію, інвестиції та стабільність</p>
     </header>
 
     <main class="cards">
-      <!-- Стаття 1 -->
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1522206024047-9c9254216759" alt="Фінансова грамотність">
+        <img src="https://images.unsplash.com/photo-1522206024047-9c9254216759?auto=format&fit=crop&w=800&q=80" alt="Фінансова грамотність">
         <h2>Фінансова грамотність</h2>
-        <p>Навчіться керувати бюджетом та досягати фінансової незалежності.</p>
+        <p>Розберіться, як працюють гроші, щоб жити впевнено та вільно.</p>
         <a href="article1.html" class="read-more">Читати</a>
       </div>
 
-      <!-- Стаття 2 -->
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5" alt="Бюджет">
+        <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5?auto=format&fit=crop&w=800&q=80" alt="Планування бюджету">
         <h2>Як планувати бюджет ефективно</h2>
-        <p>Поради для тих, хто хоче контролювати витрати та збільшити заощадження.</p>
+        <p>Контроль витрат, накопичення та фінансова дисципліна.</p>
         <a href="article2.html" class="read-more">Читати</a>
       </div>
 
-      <!-- Стаття 3 -->
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0" alt="Інвестиції">
+        <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?auto=format&fit=crop&w=800&q=80" alt="Інвестування">
         <h2>Інвестування для початківців</h2>
-        <p>Перші кроки у світі інвестицій. Почни з малого!</p>
+        <p>Як почати інвестувати без великих ризиків і мати прибуток.</p>
         <a href="article3.html" class="read-more">Читати</a>
       </div>
 
-      <!-- Стаття 4 -->
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1604594849809-dfedbc827105" alt="Фінансова подушка">
+        <img src="https://images.unsplash.com/photo-1604594849809-dfedbc827105?auto=format&fit=crop&w=800&q=80" alt="Фінансова подушка">
         <h2>Створення фінансової подушки</h2>
-        <p>Чому важливо мати резерв коштів та як його створити.</p>
+        <p>Стратегія фінансового захисту для будь-якої людини.</p>
         <a href="article4.html" class="read-more">Читати</a>
       </div>
 
-      <!-- Стаття 5 -->
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1581092787761-8a2d3abfa4f2" alt="Економія">
+        <img src="https://images.unsplash.com/photo-1581092787761-8a2d3abfa4f2?auto=format&fit=crop&w=800&q=80" alt="Економія грошей">
         <h2>Топ поради для економії грошей</h2>
-        <p>Лайфхаки для розумної економії без втрати комфорту.</p>
+        <p>Лайфхаки, як зекономити гроші і не втратити якість життя.</p>
         <a href="article5.html" class="read-more">Читати</a>
       </div>
     </main>
