--- a/article1.html
+++ b/article1.html
@@ -14,14 +14,16 @@
     </header>
     <main>
       <article>
-        <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5?ixlib=rb-4.0.3&auto=format&fit=crop&w=900&q=80" alt="Фінансова грамотність">
-        <p><strong>Фінансова грамотність</strong> — це вміння правильно керувати власними грошима. Людина, яка володіє цими знаннями, завжди знає, як уникнути боргів, створити фінансову подушку та інвестувати.</p>
+        <img src="https://images.unsplash.com/photo-1522206024047-9c9254216759?auto=format&fit=crop&w=800&q=80" alt="Фінансова грамотність">
+        <p><strong>Фінансова грамотність</strong> — це розуміння, як працюють гроші та фінансова система. Це вміння приймати правильні рішення про витрати, інвестиції та заощадження.</p>
+        <p>Ключові принципи фінансової грамотності:</p>
         <ul>
-          <li>📚 Вивчай книги і статті про фінанси.</li>
-          <li>💳 Контролюй доходи та витрати щомісяця.</li>
-          <li>🏦 Створи резервний фонд на 3-6 місяців життя.</li>
-          <li>📈 Освой інвестування для створення пасивного доходу.</li>
+          <li>📚 Освіта: Читати книги про гроші, інвестиції, підприємництво.</li>
+          <li>💳 Контроль витрат: Слідкувати за кожною витратою та планувати бюджет.</li>
+          <li>💡 Інвестиції: Створити пасивний дохід та працювати на довгострокову перспективу.</li>
+          <li>🛡️ Захист: Мати фінансову подушку та страхування.</li>
         </ul>
+        <p>Люди з високим рівнем фінансової грамотності швидше досягають фінансової незалежності та захищені від криз.</p>
       </article>
     </main>
   </div>
