--- a/article2.html
+++ b/article2.html
@@ -14,13 +14,16 @@
     </header>
     <main>
       <article>
-        <img src="https://images.unsplash.com/photo-1554224155-8d04cb21cd6c?ixlib=rb-4.0.3&auto=format&fit=crop&w=900&q=80" alt="Планування бюджету">
-        <p>Бюджетування допомагає ефективно розпоряджатися грошима та уникати фінансових труднощів.</p>
+        <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5?auto=format&fit=crop&w=800&q=80" alt="Планування бюджету">
+        <p><strong>Планування бюджету</strong> допомагає контролювати доходи та витрати, уникати боргів і досягати фінансових цілей. Це фундамент фінансової стабільності.</p>
+        <p>Кроки для ефективного планування бюджету:</p>
         <ul>
-          <li>✍️ Записуйте всі доходи та витрати.</li>
-          <li>🎯 Встановіть фінансові цілі на рік.</li>
-          <li>💡 Використовуйте правило 50/30/20 для розподілу коштів.</li>
+          <li>📒 <b>Ведіть облік витрат:</b> Записуйте кожну витрату, щоб бачити картину.</li>
+          <li>🎯 <b>Визначте цілі:</b> Наприклад, накопичення на авто, квартиру чи відпустку.</li>
+          <li>💡 <b>Правило 50/30/20:</b> 50% на базові потреби, 30% на бажання, 20% на заощадження та інвестиції.</li>
+          <li>💳 <b>Відмовтесь від кредитів:</b> Використовуйте власні кошти, щоб уникати боргів.</li>
         </ul>
+        <p>Чіткий бюджет дозволить вам уникнути фінансових стресів і швидше досягати великих цілей.</p>
       </article>
     </main>
   </div>
