--- a/article3.html
+++ b/article3.html
@@ -3,24 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Створення фінансової подушки</title>
+  <title>Інвестування для початківців</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>Створення фінансової подушки</h1>
+      <h1>Інвестування для початківців</h1>
       <nav><a href="index.html">🏠 На головну</a></nav>
     </header>
     <main>
       <article>
-        <img src="https://images.unsplash.com/photo-1580910051073-b1a0c3b3e6f1?ixlib=rb-4.0.3&auto=format&fit=crop&w=900&q=80" alt="Фінансова подушка">
-        <p>Фінансова подушка — це запас грошей на випадок непередбачених ситуацій, який допомагає почуватися спокійно.</p>
+        <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?auto=format&fit=crop&w=800&q=80" alt="Інвестування">
+        <p><strong>Інвестування</strong> — це спосіб змусити ваші гроші працювати на вас. Правильні інвестиції допоможуть створити пасивний дохід і фінансову свободу.</p>
+        <p>Поради для початківців:</p>
         <ul>
-          <li>💰 Відкладай щонайменше 10% доходу щомісяця.</li>
-          <li>🏦 Зберігай гроші на окремому рахунку.</li>
-          <li>📆 Мета — накопичити суму на 3-6 місяців витрат.</li>
+          <li>📘 <b>Вчіться:</b> Читайте про фондовий ринок, нерухомість, криптовалюту.</li>
+          <li>📊 <b>Починайте з малого:</b> Краще інвестувати $100 щомісяця, ніж чекати і не інвестувати взагалі.</li>
+          <li>📈 <b>Диверсифікація:</b> Розподіляйте гроші між різними активами, щоб зменшити ризики.</li>
+          <li>⏳ <b>Довгостроковість:</b> Найкращі результати дають інвестиції на 5-10 років.</li>
         </ul>
+        <p>Головне правило інвестування — не вкладати гроші, які не готові втратити, і завжди вчитися.</p>
       </article>
     </main>
   </div>
