--- a/article4.html
+++ b/article4.html
@@ -3,24 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Інвестування для початківців</title>
+  <title>Створення фінансової подушки</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>Інвестування для початківців</h1>
+      <h1>Створення фінансової подушки</h1>
       <nav><a href="index.html">🏠 На головну</a></nav>
     </header>
     <main>
       <article>
-        <img src="https://images.unsplash.com/photo-1523289333742-be1143f6b766?ixlib=rb-4.0.3&auto=format&fit=crop&w=900&q=80" alt="Інвестування">
-        <p>Інвестування допомагає створити пасивний дохід та збільшити капітал навіть з невеликими стартовими сумами.</p>
+        <img src="https://images.unsplash.com/photo-1604594849809-dfedbc827105?auto=format&fit=crop&w=800&q=80" alt="Фінансова подушка">
+        <p><strong>Фінансова подушка</strong> — це запас коштів, який дозволяє почуватися впевнено в кризових ситуаціях.</p>
+        <p>Як створити фінансову подушку:</p>
         <ul>
-          <li>📖 Вивчай ринок і інвестиційні інструменти.</li>
-          <li>📊 Починай з малих сум, щоб знизити ризики.</li>
-          <li>💼 Диверсифікуй портфель інвестицій.</li>
+          <li>💰 <b>Відкладай 10-20% доходу:</b> Навіть невеликі суми щомісяця створять безпеку.</li>
+          <li>🏦 <b>Тримай гроші окремо:</b> На окремому рахунку або депозиті.</li>
+          <li>📅 <b>Розрахуй суму:</b> Подушка має покривати витрати мінімум на 3-6 місяців.</li>
         </ul>
+        <p>Фінансова подушка — це твій захист у випадку втрати роботи чи непередбачених витрат.</p>
       </article>
     </main>
   </div>
