--- a/article5.html
+++ b/article5.html
@@ -14,13 +14,16 @@
     </header>
     <main>
       <article>
-        <img src="https://images.unsplash.com/photo-1556742526-795a8eacaa2c?ixlib=rb-4.0.3&auto=format&fit=crop&w=900&q=80" alt="Економія грошей">
-        <p>Економія грошей — це не про обмеження, а про грамотне використання ресурсів і фінансову свободу.</p>
+        <img src="https://images.unsplash.com/photo-1581092787761-8a2d3abfa4f2?auto=format&fit=crop&w=800&q=80" alt="Економія грошей">
+        <p><strong>Економія грошей</strong> — це не обмеження, а розумне використання ресурсів. Вона допомагає створити фінансову свободу.</p>
+        <p>Практичні поради:</p>
         <ul>
-          <li>🛒 Купуй тільки те, що дійсно потрібно.</li>
-          <li>📅 Плануй покупки і складай список перед походом у магазин.</li>
-          <li>🔍 Порівнюй ціни та користуйся акціями.</li>
+          <li>🛒 <b>Плануйте покупки:</b> Складай список і не купуй зайвого.</li>
+          <li>🍽️ <b>Готуй вдома:</b> Це дешевше та корисніше.</li>
+          <li>📅 <b>Відкладай щомісяця:</b> Навіть 5-10% доходу створять заощадження.</li>
+          <li>💡 <b>Шукай знижки та кешбек:</b> Використовуй купони та акції.</li>
         </ul>
+        <p>Економія — це стратегія, яка допоможе тобі не просто витрачати менше, а грамотно розподіляти фінанси.</p>
       </article>
     </main>
   </div>
