--- a/index.html
+++ b/index.html
@@ -7,48 +7,46 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <header>
-      <h1>💰 Фінансовий блог</h1>
-      <p>Практичні поради про гроші, економію, інвестиції та стабільність</p>
-    </header>
+  <header>
+    <h1>💰 Фінансовий блог</h1>
+    <p>Поради для фінансової свободи та розумного управління грошима</p>
+  </header>
 
-    <main class="cards">
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1522206024047-9c9254216759?auto=format&fit=crop&w=800&q=80" alt="Фінансова грамотність">
-        <h2>Фінансова грамотність</h2>
-        <p>Розберіться, як працюють гроші, щоб жити впевнено та вільно.</p>
-        <a href="article1.html" class="read-more">Читати</a>
-      </div>
+  <main class="card-container">
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1573164574396-9d7f6d0f6a2a?auto=format&fit=crop&w=800&q=80" alt="Фінансова грамотність">
+      <h2>Фінансова грамотність</h2>
+      <p>Основи управління фінансами для впевненого майбутнього.</p>
+      <a href="article1.html" class="btn">Читати</a>
+    </div>
 
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5?auto=format&fit=crop&w=800&q=80" alt="Планування бюджету">
-        <h2>Як планувати бюджет ефективно</h2>
-        <p>Контроль витрат, накопичення та фінансова дисципліна.</p>
-        <a href="article2.html" class="read-more">Читати</a>
-      </div>
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5?auto=format&fit=crop&w=800&q=80" alt="Бюджет">
+      <h2>Як планувати бюджет</h2>
+      <p>Поради для контролю витрат та накопичень.</p>
+      <a href="article2.html" class="btn">Читати</a>
+    </div>
 
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?auto=format&fit=crop&w=800&q=80" alt="Інвестування">
-        <h2>Інвестування для початківців</h2>
-        <p>Як почати інвестувати без великих ризиків і мати прибуток.</p>
-        <a href="article3.html" class="read-more">Читати</a>
-      </div>
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?auto=format&fit=crop&w=800&q=80" alt="Інвестування">
+      <h2>Інвестування</h2>
+      <p>Як інвестувати з нуля і уникнути помилок.</p>
+      <a href="article3.html" class="btn">Читати</a>
+    </div>
 
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1604594849809-dfedbc827105?auto=format&fit=crop&w=800&q=80" alt="Фінансова подушка">
-        <h2>Створення фінансової подушки</h2>
-        <p>Стратегія фінансового захисту для будь-якої людини.</p>
-        <a href="article4.html" class="read-more">Читати</a>
-      </div>
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1604594849809-dfedbc827105?auto=format&fit=crop&w=800&q=80" alt="Фінансова подушка">
+      <h2>Фінансова подушка</h2>
+      <p>Запас грошей для кризових ситуацій.</p>
+      <a href="article4.html" class="btn">Читати</a>
+    </div>
 
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1581092787761-8a2d3abfa4f2?auto=format&fit=crop&w=800&q=80" alt="Економія грошей">
-        <h2>Топ поради для економії грошей</h2>
-        <p>Лайфхаки, як зекономити гроші і не втратити якість життя.</p>
-        <a href="article5.html" class="read-more">Читати</a>
-      </div>
-    </main>
-  </div>
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1581092787761-8a2d3abfa4f2?auto=format&fit=crop&w=800&q=80" alt="Економія">
+      <h2>Економія грошей</h2>
+      <p>Як економити гроші без втрати якості життя.</p>
+      <a href="article5.html" class="btn">Читати</a>
+    </div>
+  </main>
 </body>
 </html>
