--- a/index.html
+++ b/index.html
@@ -8,43 +8,43 @@
 </head>
 <body>
   <header>
-    <h1>💰 Фінансовий блог</h1>
-    <p>Поради для фінансової свободи та розумного управління грошима</p>
+    <h1>Фінансовий блог</h1>
+    <p>Практичні поради про гроші, економію, інвестиції та стабільність</p>
   </header>
 
   <main class="card-container">
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1573164574396-9d7f6d0f6a2a?auto=format&fit=crop&w=800&q=80" alt="Фінансова грамотність">
+      <img src="https://images.unsplash.com/photo-1553729459-efe14ef6055d" alt="Фінансова грамотність">
       <h2>Фінансова грамотність</h2>
-      <p>Основи управління фінансами для впевненого майбутнього.</p>
+      <p>Розберіться, як працюють гроші, щоб жити впевнено та вільно.</p>
       <a href="article1.html" class="btn">Читати</a>
     </div>
 
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5?auto=format&fit=crop&w=800&q=80" alt="Бюджет">
-      <h2>Як планувати бюджет</h2>
-      <p>Поради для контролю витрат та накопичень.</p>
+      <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5" alt="Бюджет">
+      <h2>Як планувати бюджет ефективно</h2>
+      <p>Кроки, що допоможуть контролювати фінанси та досягати цілей.</p>
       <a href="article2.html" class="btn">Читати</a>
     </div>
 
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?auto=format&fit=crop&w=800&q=80" alt="Інвестування">
-      <h2>Інвестування</h2>
-      <p>Як інвестувати з нуля і уникнути помилок.</p>
+      <img src="https://images.unsplash.com/photo-1565514022-0238b5e03f3d" alt="Інвестиції">
+      <h2>Інвестування для початківців</h2>
+      <p>Дізнайтеся, як інвестувати без великих ризиків і заробляти.</p>
       <a href="article3.html" class="btn">Читати</a>
     </div>
 
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1604594849809-dfedbc827105?auto=format&fit=crop&w=800&q=80" alt="Фінансова подушка">
-      <h2>Фінансова подушка</h2>
-      <p>Запас грошей для кризових ситуацій.</p>
+      <img src="https://images.unsplash.com/photo-1581090700227-4c4f50b0b1b2" alt="Фінансова подушка">
+      <h2>Створення фінансової подушки</h2>
+      <p>Стратегії для захисту ваших фінансів на випадок кризи.</p>
       <a href="article4.html" class="btn">Читати</a>
     </div>
 
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1581092787761-8a2d3abfa4f2?auto=format&fit=crop&w=800&q=80" alt="Економія">
-      <h2>Економія грошей</h2>
-      <p>Як економити гроші без втрати якості життя.</p>
+      <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0" alt="Економія">
+      <h2>Топ поради для економії грошей</h2>
+      <p>Лайфхаки, як економити без втрати якості життя.</p>
       <a href="article5.html" class="btn">Читати</a>
     </div>
   </main>
