--- a/article1.html
+++ b/article1.html
@@ -10,20 +10,20 @@
   <div class="container">
     <header>
       <h1>Фінансова грамотність</h1>
-      <nav><a href="index.html">🏠 На головну</a></nav>
+      <nav><a href="index.html" class="btn">🏠 На головну</a></nav>
     </header>
     <main>
       <article>
-        <img src="https://images.unsplash.com/photo-1522206024047-9c9254216759?auto=format&fit=crop&w=800&q=80" alt="Фінансова грамотність">
-        <p><strong>Фінансова грамотність</strong> — це розуміння, як працюють гроші та фінансова система. Це вміння приймати правильні рішення про витрати, інвестиції та заощадження.</p>
-        <p>Ключові принципи фінансової грамотності:</p>
+        <img src="https://images.unsplash.com/photo-1553729459-efe14ef6055d" alt="Фінансова грамотність">
+        <p><strong>Фінансова грамотність</strong> — це здатність ефективно управляти власними фінансами, планувати витрати та інвестиції. Це не лише про економію, а й про свободу вибору та впевненість у майбутньому.</p>
+        <p>Ключові навички фінансової грамотності:</p>
         <ul>
-          <li>📚 Освіта: Читати книги про гроші, інвестиції, підприємництво.</li>
-          <li>💳 Контроль витрат: Слідкувати за кожною витратою та планувати бюджет.</li>
-          <li>💡 Інвестиції: Створити пасивний дохід та працювати на довгострокову перспективу.</li>
-          <li>🛡️ Захист: Мати фінансову подушку та страхування.</li>
+          <li>📘 Розуміння, як працюють гроші та кредити.</li>
+          <li>💳 Вміння уникати боргів та керувати кредитами.</li>
+          <li>💰 Планування бюджету та створення резервного фонду.</li>
+          <li>📈 Інвестування у власний розвиток та активи.</li>
         </ul>
-        <p>Люди з високим рівнем фінансової грамотності швидше досягають фінансової незалежності та захищені від криз.</p>
+        <p>Чим раніше почати вивчати фінансову грамотність, тим легше досягти фінансової стабільності та свободи.</p>
       </article>
     </main>
   </div>
