--- a/article2.html
+++ b/article2.html
@@ -10,20 +10,20 @@
   <div class="container">
     <header>
       <h1>Як планувати бюджет ефективно</h1>
-      <nav><a href="index.html">🏠 На головну</a></nav>
+      <nav><a href="index.html" class="btn">🏠 На головну</a></nav>
     </header>
     <main>
       <article>
-        <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5?auto=format&fit=crop&w=800&q=80" alt="Планування бюджету">
-        <p><strong>Планування бюджету</strong> допомагає контролювати доходи та витрати, уникати боргів і досягати фінансових цілей. Це фундамент фінансової стабільності.</p>
-        <p>Кроки для ефективного планування бюджету:</p>
+        <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5" alt="Планування бюджету">
+        <p>Ефективне планування бюджету — це ключ до фінансової стабільності. Правильно розподілені кошти допомагають уникнути боргів та дозволяють накопичувати гроші для важливих цілей.</p>
+        <p>Корисні поради для планування:</p>
         <ul>
-          <li>📒 <b>Ведіть облік витрат:</b> Записуйте кожну витрату, щоб бачити картину.</li>
-          <li>🎯 <b>Визначте цілі:</b> Наприклад, накопичення на авто, квартиру чи відпустку.</li>
-          <li>💡 <b>Правило 50/30/20:</b> 50% на базові потреби, 30% на бажання, 20% на заощадження та інвестиції.</li>
-          <li>💳 <b>Відмовтесь від кредитів:</b> Використовуйте власні кошти, щоб уникати боргів.</li>
+          <li>✍️ Запишіть усі доходи та витрати за місяць.</li>
+          <li>🎯 Встановіть чіткі фінансові цілі.</li>
+          <li>💡 Використовуйте правило 50/30/20 для розподілу коштів.</li>
+          <li>📊 Стежте за витратами через додатки або таблиці.</li>
         </ul>
-        <p>Чіткий бюджет дозволить вам уникнути фінансових стресів і швидше досягати великих цілей.</p>
+        <p>Регулярний контроль бюджету допоможе відчувати впевненість у фінансових справах та досягати поставлених цілей.</p>
       </article>
     </main>
   </div>
