--- a/article3.html
+++ b/article3.html
@@ -10,20 +10,20 @@
   <div class="container">
     <header>
       <h1>Інвестування для початківців</h1>
-      <nav><a href="index.html">🏠 На головну</a></nav>
+      <nav><a href="index.html" class="btn">🏠 На головну</a></nav>
     </header>
     <main>
       <article>
-        <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?auto=format&fit=crop&w=800&q=80" alt="Інвестування">
-        <p><strong>Інвестування</strong> — це спосіб змусити ваші гроші працювати на вас. Правильні інвестиції допоможуть створити пасивний дохід і фінансову свободу.</p>
+        <img src="https://images.unsplash.com/photo-1565514022-0238b5e03f3d" alt="Інвестиції">
+        <p>Інвестування — це один з головних інструментів фінансової свободи. Воно дозволяє зберігати та примножувати капітал, а також захищати гроші від інфляції.</p>
         <p>Поради для початківців:</p>
         <ul>
-          <li>📘 <b>Вчіться:</b> Читайте про фондовий ринок, нерухомість, криптовалюту.</li>
-          <li>📊 <b>Починайте з малого:</b> Краще інвестувати $100 щомісяця, ніж чекати і не інвестувати взагалі.</li>
-          <li>📈 <b>Диверсифікація:</b> Розподіляйте гроші між різними активами, щоб зменшити ризики.</li>
-          <li>⏳ <b>Довгостроковість:</b> Найкращі результати дають інвестиції на 5-10 років.</li>
+          <li>📖 Вивчайте різні інструменти інвестування: акції, облігації, нерухомість.</li>
+          <li>💡 Почніть із невеликих сум та диверсифікуйте портфель.</li>
+          <li>📈 Інвестуйте регулярно, навіть невеликі суми дають результат з часом.</li>
+          <li>⚖️ Завжди оцінюйте ризики та не інвестуйте останні гроші.</li>
         </ul>
-        <p>Головне правило інвестування — не вкладати гроші, які не готові втратити, і завжди вчитися.</p>
+        <p>Інвестування — це шлях до фінансової незалежності, який можна почати вже сьогодні.</p>
       </article>
     </main>
   </div>
