--- a/article4.html
+++ b/article4.html
@@ -10,19 +10,20 @@
   <div class="container">
     <header>
       <h1>Створення фінансової подушки</h1>
-      <nav><a href="index.html">🏠 На головну</a></nav>
+      <nav><a href="index.html" class="btn">🏠 На головну</a></nav>
     </header>
     <main>
       <article>
-        <img src="https://images.unsplash.com/photo-1604594849809-dfedbc827105?auto=format&fit=crop&w=800&q=80" alt="Фінансова подушка">
-        <p><strong>Фінансова подушка</strong> — це запас коштів, який дозволяє почуватися впевнено в кризових ситуаціях.</p>
+        <img src="https://images.unsplash.com/photo-1581090700227-4c4f50b0b1b2" alt="Фінансова подушка">
+        <p>Фінансова подушка — це запас грошей на випадок непередбачуваних ситуацій. Вона допомагає зберегти спокій та впевненість у кризових умовах.</p>
         <p>Як створити фінансову подушку:</p>
         <ul>
-          <li>💰 <b>Відкладай 10-20% доходу:</b> Навіть невеликі суми щомісяця створять безпеку.</li>
-          <li>🏦 <b>Тримай гроші окремо:</b> На окремому рахунку або депозиті.</li>
-          <li>📅 <b>Розрахуй суму:</b> Подушка має покривати витрати мінімум на 3-6 місяців.</li>
+          <li>💰 Відкладай мінімум 10-20% доходу щомісяця.</li>
+          <li>🏦 Зберігай гроші на окремому рахунку.</li>
+          <li>📅 Мета — накопичити кошти на 3-6 місяців витрат.</li>
+          <li>🔐 Використовуй депозит або ощадний рахунок для збереження коштів.</li>
         </ul>
-        <p>Фінансова подушка — це твій захист у випадку втрати роботи чи непередбачених витрат.</p>
+        <p>Подушка безпеки допомагає уникнути паніки в складні часи та приймати зважені рішення.</p>
       </article>
     </main>
   </div>
