--- a/article5.html
+++ b/article5.html
@@ -10,20 +10,20 @@
   <div class="container">
     <header>
       <h1>Топ поради для економії грошей</h1>
-      <nav><a href="index.html">🏠 На головну</a></nav>
+      <nav><a href="index.html" class="btn">🏠 На головну</a></nav>
     </header>
     <main>
       <article>
-        <img src="https://images.unsplash.com/photo-1581092787761-8a2d3abfa4f2?auto=format&fit=crop&w=800&q=80" alt="Економія грошей">
-        <p><strong>Економія грошей</strong> — це не обмеження, а розумне використання ресурсів. Вона допомагає створити фінансову свободу.</p>
-        <p>Практичні поради:</p>
+        <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0" alt="Економія грошей">
+        <p>Економія грошей — це не про жорсткі обмеження, а про грамотне використання ресурсів. Вона дозволяє більше заощаджувати та інвестувати у важливі речі.</p>
+        <p>Поради для економії:</p>
         <ul>
-          <li>🛒 <b>Плануйте покупки:</b> Складай список і не купуй зайвого.</li>
-          <li>🍽️ <b>Готуй вдома:</b> Це дешевше та корисніше.</li>
-          <li>📅 <b>Відкладай щомісяця:</b> Навіть 5-10% доходу створять заощадження.</li>
-          <li>💡 <b>Шукай знижки та кешбек:</b> Використовуй купони та акції.</li>
+          <li>🛒 Купуй лише те, що дійсно потрібно.</li>
+          <li>📅 Плануй покупки та складай список перед походом у магазин.</li>
+          <li>📉 Уникай імпульсивних витрат і стеж за акціями.</li>
+          <li>💡 Обирай довготривалі та якісні речі замість дешевих аналогів.</li>
         </ul>
-        <p>Економія — це стратегія, яка допоможе тобі не просто витрачати менше, а грамотно розподіляти фінанси.</p>
+        <p>Розумна економія — це шлях до фінансової стабільності та великих можливостей у майбутньому.</p>
       </article>
     </main>
   </div>
