--- a/index.html
+++ b/index.html
@@ -7,45 +7,55 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
+  <header class="main-header">
     <h1>Фінансовий блог</h1>
-    <p>Практичні поради про гроші, економію, інвестиції та стабільність</p>
+    <p>Поради про фінанси, інвестиції, економію та стабільність</p>
   </header>
 
-  <main class="card-container">
+  <main class="cards-container">
     <div class="card">
       <img src="https://images.unsplash.com/photo-1553729459-efe14ef6055d" alt="Фінансова грамотність">
-      <h2>Фінансова грамотність</h2>
-      <p>Розберіться, як працюють гроші, щоб жити впевнено та вільно.</p>
-      <a href="article1.html" class="btn">Читати</a>
+      <div class="card-content">
+        <h2>Фінансова грамотність</h2>
+        <p>Розберіться, як працюють гроші, щоб жити впевнено та вільно.</p>
+        <a href="article1.html" class="btn">Читати</a>
+      </div>
     </div>
 
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5" alt="Бюджет">
-      <h2>Як планувати бюджет ефективно</h2>
-      <p>Кроки, що допоможуть контролювати фінанси та досягати цілей.</p>
-      <a href="article2.html" class="btn">Читати</a>
+      <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5" alt="Планування бюджету">
+      <div class="card-content">
+        <h2>Планування бюджету</h2>
+        <p>Керуйте витратами та створюйте фінансову стабільність.</p>
+        <a href="article2.html" class="btn">Читати</a>
+      </div>
     </div>
 
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1565514022-0238b5e03f3d" alt="Інвестиції">
-      <h2>Інвестування для початківців</h2>
-      <p>Дізнайтеся, як інвестувати без великих ризиків і заробляти.</p>
-      <a href="article3.html" class="btn">Читати</a>
+      <img src="https://images.unsplash.com/photo-1565514022-0238b5e03f3d" alt="Інвестування">
+      <div class="card-content">
+        <h2>Інвестування для початківців</h2>
+        <p>Дізнайтесь, як інвестувати без великих ризиків.</p>
+        <a href="article3.html" class="btn">Читати</a>
+      </div>
     </div>
 
     <div class="card">
       <img src="https://images.unsplash.com/photo-1581090700227-4c4f50b0b1b2" alt="Фінансова подушка">
-      <h2>Створення фінансової подушки</h2>
-      <p>Стратегії для захисту ваших фінансів на випадок кризи.</p>
-      <a href="article4.html" class="btn">Читати</a>
+      <div class="card-content">
+        <h2>Фінансова подушка</h2>
+        <p>Стратегія фінансового захисту для будь-кого.</p>
+        <a href="article4.html" class="btn">Читати</a>
+      </div>
     </div>
 
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0" alt="Економія">
-      <h2>Топ поради для економії грошей</h2>
-      <p>Лайфхаки, як економити без втрати якості життя.</p>
-      <a href="article5.html" class="btn">Читати</a>
+      <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0" alt="Економія грошей">
+      <div class="card-content">
+        <h2>Топ поради для економії</h2>
+        <p>Лайфхаки, як економити гроші та не втратити якість життя.</p>
+        <a href="article5.html" class="btn">Читати</a>
+      </div>
     </div>
   </main>
 </body>
