--- a/article1.html
+++ b/article1.html
@@ -14,16 +14,16 @@
     </header>
     <main>
       <article>
-        <img src="https://images.unsplash.com/photo-1553729459-efe14ef6055d" alt="Фінансова грамотність">
-        <p><strong>Фінансова грамотність</strong> — це здатність ефективно управляти власними фінансами, планувати витрати та інвестиції. Це не лише про економію, а й про свободу вибору та впевненість у майбутньому.</p>
-        <p>Ключові навички фінансової грамотності:</p>
+        <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5" alt="Фінансова грамотність">
+        <p>Фінансова грамотність – це основа вашого фінансового благополуччя. Вона допомагає приймати правильні рішення у повсякденних витратах, заощадженнях та інвестиціях.</p>
+        <p>Ключові навички:</p>
         <ul>
-          <li>📘 Розуміння, як працюють гроші та кредити.</li>
-          <li>💳 Вміння уникати боргів та керувати кредитами.</li>
-          <li>💰 Планування бюджету та створення резервного фонду.</li>
-          <li>📈 Інвестування у власний розвиток та активи.</li>
+          <li>📖 Планування бюджету</li>
+          <li>💳 Розумне користування кредитами</li>
+          <li>📈 Інвестування для створення пасивного доходу</li>
+          <li>💰 Накопичення фінансової подушки</li>
         </ul>
-        <p>Чим раніше почати вивчати фінансову грамотність, тим легше досягти фінансової стабільності та свободи.</p>
+        <p>Фінансова грамотність дає впевненість та свободу у виборі життєвого шляху.</p>
       </article>
     </main>
   </div>
