--- a/article3.html
+++ b/article3.html
@@ -14,16 +14,15 @@
     </header>
     <main>
       <article>
-        <img src="https://images.unsplash.com/photo-1565514022-0238b5e03f3d" alt="Інвестиції">
-        <p>Інвестування — це один з головних інструментів фінансової свободи. Воно дозволяє зберігати та примножувати капітал, а також захищати гроші від інфляції.</p>
-        <p>Поради для початківців:</p>
+        <img src="https://images.unsplash.com/photo-1604014237744-5b70f5dcb582" alt="Інвестиції">
+        <p>Інвестування – це ключ до створення пасивного доходу та фінансової свободи. Почати можна навіть з невеликих сум.</p>
         <ul>
-          <li>📖 Вивчайте різні інструменти інвестування: акції, облігації, нерухомість.</li>
-          <li>💡 Почніть із невеликих сум та диверсифікуйте портфель.</li>
-          <li>📈 Інвестуйте регулярно, навіть невеликі суми дають результат з часом.</li>
-          <li>⚖️ Завжди оцінюйте ризики та не інвестуйте останні гроші.</li>
+          <li>📚 Вивчайте базові інструменти інвестування (акції, облігації, фонди).</li>
+          <li>💸 Почніть з невеликих інвестицій, щоб знизити ризики.</li>
+          <li>🧩 Диверсифікуйте портфель: розподіляйте гроші у різні активи.</li>
+          <li>📈 Інвестуйте регулярно, а не одноразово.</li>
         </ul>
-        <p>Інвестування — це шлях до фінансової незалежності, який можна почати вже сьогодні.</p>
+        <p>Головне – почати сьогодні, а не чекати «ідеального моменту».</p>
       </article>
     </main>
   </div>
