--- a/article2.html
+++ b/article2.html
@@ -15,15 +15,14 @@
     <main>
       <article>
         <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5" alt="Планування бюджету">
-        <p>Ефективне планування бюджету — це ключ до фінансової стабільності. Правильно розподілені кошти допомагають уникнути боргів та дозволяють накопичувати гроші для важливих цілей.</p>
-        <p>Корисні поради для планування:</p>
+        <p>Ефективне планування бюджету допомагає уникати боргів, збільшувати заощадження та впевнено рухатися до фінансових цілей.</p>
         <ul>
-          <li>✍️ Запишіть усі доходи та витрати за місяць.</li>
-          <li>🎯 Встановіть чіткі фінансові цілі.</li>
-          <li>💡 Використовуйте правило 50/30/20 для розподілу коштів.</li>
-          <li>📊 Стежте за витратами через додатки або таблиці.</li>
+          <li>📊 Ведіть облік доходів та витрат щомісяця.</li>
+          <li>🎯 Встановлюйте чіткі фінансові цілі.</li>
+          <li>💡 Використовуйте правило 50/30/20: 50% на потреби, 30% на бажання, 20% на заощадження.</li>
+          <li>📆 Створюйте фінансовий план мінімум на 6 місяців вперед.</li>
         </ul>
-        <p>Регулярний контроль бюджету допоможе відчувати впевненість у фінансових справах та досягати поставлених цілей.</p>
+        <p>Бюджет – це інструмент контролю, який дає свободу, а не обмеження.</p>
       </article>
     </main>
   </div>
