--- a/article4.html
+++ b/article4.html
@@ -3,27 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Створення фінансової подушки</title>
+  <title>Фінансова подушка</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>Створення фінансової подушки</h1>
+      <h1>Фінансова подушка</h1>
       <nav><a href="index.html" class="btn">🏠 На головну</a></nav>
     </header>
     <main>
       <article>
-        <img src="https://images.unsplash.com/photo-1581090700227-4c4f50b0b1b2" alt="Фінансова подушка">
-        <p>Фінансова подушка — це запас грошей на випадок непередбачуваних ситуацій. Вона допомагає зберегти спокій та впевненість у кризових умовах.</p>
-        <p>Як створити фінансову подушку:</p>
+        <img src="https://images.unsplash.com/photo-1631206735552-07f657668218" alt="Фінансова подушка">
+        <p>Фінансова подушка – це резерв грошей на непередбачувані ситуації. Вона забезпечує спокій та стабільність у будь-якій кризі.</p>
         <ul>
-          <li>💰 Відкладай мінімум 10-20% доходу щомісяця.</li>
-          <li>🏦 Зберігай гроші на окремому рахунку.</li>
-          <li>📅 Мета — накопичити кошти на 3-6 місяців витрат.</li>
-          <li>🔐 Використовуй депозит або ощадний рахунок для збереження коштів.</li>
+          <li>💰 Розмір подушки: 3-6 місяців ваших витрат.</li>
+          <li>🏦 Зберігайте ці гроші окремо від основного рахунку.</li>
+          <li>🔐 Виберіть надійний банк або депозит з доступом у будь-який час.</li>
+          <li>📆 Поповнюйте рахунок щомісяця, навіть невеликими сумами.</li>
         </ul>
-        <p>Подушка безпеки допомагає уникнути паніки в складні часи та приймати зважені рішення.</p>
+        <p>Це ваша фінансова безпека, яка дає можливість приймати зважені рішення у важкі часи.</p>
       </article>
     </main>
   </div>
