--- a/article1.html
+++ b/article1.html
@@ -10,20 +10,20 @@
   <div class="container">
     <header>
       <h1>Фінансова грамотність</h1>
-      <nav><a href="index.html" class="btn">🏠 На головну</a></nav>
+      <nav><a href="index.html">🏠 На головну</a></nav>
     </header>
     <main>
       <article>
         <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5" alt="Фінансова грамотність">
-        <p>Фінансова грамотність – це основа вашого фінансового благополуччя. Вона допомагає приймати правильні рішення у повсякденних витратах, заощадженнях та інвестиціях.</p>
+        <p><strong>Фінансова грамотність</strong> — це основа вашого фінансового благополуччя. Вона допомагає приймати правильні рішення у витратах, заощадженнях та інвестиціях.</p>
         <p>Ключові навички:</p>
         <ul>
-          <li>📖 Планування бюджету</li>
+          <li>📘 Планування бюджету</li>
           <li>💳 Розумне користування кредитами</li>
-          <li>📈 Інвестування для створення пасивного доходу</li>
-          <li>💰 Накопичення фінансової подушки</li>
+          <li>📈 Інвестування для пасивного доходу</li>
+          <li>💰 Створення фінансової подушки</li>
         </ul>
-        <p>Фінансова грамотність дає впевненість та свободу у виборі життєвого шляху.</p>
+        <p>Фінансова грамотність дає впевненість у завтрашньому дні та допомагає уникнути фінансових криз.</p>
       </article>
     </main>
   </div>
