--- a/article2.html
+++ b/article2.html
@@ -10,19 +10,18 @@
   <div class="container">
     <header>
       <h1>Як планувати бюджет ефективно</h1>
-      <nav><a href="index.html" class="btn">🏠 На головну</a></nav>
+      <nav><a href="index.html">🏠 На головну</a></nav>
     </header>
     <main>
       <article>
-        <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5" alt="Планування бюджету">
-        <p>Ефективне планування бюджету допомагає уникати боргів, збільшувати заощадження та впевнено рухатися до фінансових цілей.</p>
+        <img src="https://images.unsplash.com/photo-1553729459-efe14ef6055d" alt="Планування бюджету">
+        <p><strong>Планування бюджету</strong> — це ключ до фінансової стабільності. Ведення бюджету допомагає чітко бачити, куди витрачаються ваші гроші.</p>
         <ul>
-          <li>📊 Ведіть облік доходів та витрат щомісяця.</li>
-          <li>🎯 Встановлюйте чіткі фінансові цілі.</li>
-          <li>💡 Використовуйте правило 50/30/20: 50% на потреби, 30% на бажання, 20% на заощадження.</li>
-          <li>📆 Створюйте фінансовий план мінімум на 6 місяців вперед.</li>
+          <li>📝 Запишіть усі доходи та витрати.</li>
+          <li>🎯 Визначте фінансові цілі.</li>
+          <li>💡 Використовуйте правило 50/30/20 для балансу.</li>
         </ul>
-        <p>Бюджет – це інструмент контролю, який дає свободу, а не обмеження.</p>
+        <p>Цей підхід допомагає уникнути боргів та накопичувати капітал.</p>
       </article>
     </main>
   </div>
