--- a/article3.html
+++ b/article3.html
@@ -10,19 +10,18 @@
   <div class="container">
     <header>
       <h1>Інвестування для початківців</h1>
-      <nav><a href="index.html" class="btn">🏠 На головну</a></nav>
+      <nav><a href="index.html">🏠 На головну</a></nav>
     </header>
     <main>
       <article>
-        <img src="https://images.unsplash.com/photo-1604014237744-5b70f5dcb582" alt="Інвестиції">
-        <p>Інвестування – це ключ до створення пасивного доходу та фінансової свободи. Почати можна навіть з невеликих сум.</p>
+        <img src="https://images.unsplash.com/photo-1581092580497-e0d23cbdf1dc" alt="Інвестування">
+        <p>Інвестування — один з найкращих способів зберегти та примножити капітал. Головне — почати з малого та мінімізувати ризики.</p>
         <ul>
-          <li>📚 Вивчайте базові інструменти інвестування (акції, облігації, фонди).</li>
-          <li>💸 Почніть з невеликих інвестицій, щоб знизити ризики.</li>
-          <li>🧩 Диверсифікуйте портфель: розподіляйте гроші у різні активи.</li>
-          <li>📈 Інвестуйте регулярно, а не одноразово.</li>
+          <li>📖 Вивчайте інструменти інвестування.</li>
+          <li>💵 Починайте з малих сум.</li>
+          <li>📊 Диверсифікуйте портфель.</li>
         </ul>
-        <p>Головне – почати сьогодні, а не чекати «ідеального моменту».</p>
+        <p>Правильні інвестиції формують фінансову незалежність.</p>
       </article>
     </main>
   </div>
