--- a/article4.html
+++ b/article4.html
@@ -3,26 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Фінансова подушка</title>
+  <title>Створення фінансової подушки</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>Фінансова подушка</h1>
-      <nav><a href="index.html" class="btn">🏠 На головну</a></nav>
+      <h1>Створення фінансової подушки</h1>
+      <nav><a href="index.html">🏠 На головну</a></nav>
     </header>
     <main>
       <article>
-        <img src="https://images.unsplash.com/photo-1631206735552-07f657668218" alt="Фінансова подушка">
-        <p>Фінансова подушка – це резерв грошей на непередбачувані ситуації. Вона забезпечує спокій та стабільність у будь-якій кризі.</p>
+        <img src="https://images.unsplash.com/photo-1581091012184-5c1d4b0f3b9f" alt="Фінансова подушка">
+        <p>Фінансова подушка — це резерв на випадок непередбачуваних ситуацій. Вона допомагає уникнути стресу під час фінансових труднощів.</p>
         <ul>
-          <li>💰 Розмір подушки: 3-6 місяців ваших витрат.</li>
-          <li>🏦 Зберігайте ці гроші окремо від основного рахунку.</li>
-          <li>🔐 Виберіть надійний банк або депозит з доступом у будь-який час.</li>
-          <li>📆 Поповнюйте рахунок щомісяця, навіть невеликими сумами.</li>
+          <li>💰 Відкладай мінімум 10% від доходу.</li>
+          <li>🏦 Зберігай гроші окремо.</li>
+          <li>📅 Мета: накопичити суму на 3-6 місяців витрат.</li>
         </ul>
-        <p>Це ваша фінансова безпека, яка дає можливість приймати зважені рішення у важкі часи.</p>
       </article>
     </main>
   </div>
