--- a/article5.html
+++ b/article5.html
@@ -10,20 +10,17 @@
   <div class="container">
     <header>
       <h1>Топ поради для економії грошей</h1>
-      <nav><a href="index.html" class="btn">🏠 На головну</a></nav>
+      <nav><a href="index.html">🏠 На головну</a></nav>
     </header>
     <main>
       <article>
-        <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0" alt="Економія грошей">
-        <p>Економія грошей — це не про жорсткі обмеження, а про грамотне використання ресурсів. Вона дозволяє більше заощаджувати та інвестувати у важливі речі.</p>
-        <p>Поради для економії:</p>
+        <img src="https://images.unsplash.com/photo-1581091012184-5c1d4b0f3b9f" alt="Економія грошей">
+        <p>Економія грошей — це не обмеження, а грамотне використання ресурсів для фінансової свободи.</p>
         <ul>
-          <li>🛒 Купуй лише те, що дійсно потрібно.</li>
-          <li>📅 Плануй покупки та складай список перед походом у магазин.</li>
-          <li>📉 Уникай імпульсивних витрат і стеж за акціями.</li>
-          <li>💡 Обирай довготривалі та якісні речі замість дешевих аналогів.</li>
+          <li>🛒 Купуй лише необхідне.</li>
+          <li>📝 Плануй покупки заздалегідь.</li>
+          <li>💳 Використовуй кешбек і знижки.</li>
         </ul>
-        <p>Розумна економія — це шлях до фінансової стабільності та великих можливостей у майбутньому.</p>
       </article>
     </main>
   </div>
