--- a/article1.html
+++ b/article1.html
@@ -15,15 +15,14 @@
     <main>
       <article>
         <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5" alt="Фінансова грамотність">
-        <p><strong>Фінансова грамотність</strong> — це основа вашого фінансового благополуччя. Вона допомагає приймати правильні рішення у витратах, заощадженнях та інвестиціях.</p>
-        <p>Ключові навички:</p>
+        <p>Фінансова грамотність — це основа стабільного майбутнього. Вона допомагає приймати правильні рішення у витратах, заощадженнях і інвестиціях.</p>
         <ul>
           <li>📘 Планування бюджету</li>
           <li>💳 Розумне користування кредитами</li>
-          <li>📈 Інвестування для пасивного доходу</li>
+          <li>📈 Інвестиції для створення пасивного доходу</li>
           <li>💰 Створення фінансової подушки</li>
         </ul>
-        <p>Фінансова грамотність дає впевненість у завтрашньому дні та допомагає уникнути фінансових криз.</p>
+        <p>Фінансова грамотність забезпечує впевненість та свободу у виборі життєвого шляху.</p>
       </article>
     </main>
   </div>
