--- a/article2.html
+++ b/article2.html
@@ -15,13 +15,14 @@
     <main>
       <article>
         <img src="https://images.unsplash.com/photo-1553729459-efe14ef6055d" alt="Планування бюджету">
-        <p><strong>Планування бюджету</strong> — це ключ до фінансової стабільності. Ведення бюджету допомагає чітко бачити, куди витрачаються ваші гроші.</p>
+        <p>Планування бюджету дозволяє чітко контролювати свої доходи та витрати, уникати фінансових криз і накопичувати гроші для важливих цілей.</p>
         <ul>
-          <li>📝 Запишіть усі доходи та витрати.</li>
-          <li>🎯 Визначте фінансові цілі.</li>
-          <li>💡 Використовуйте правило 50/30/20 для балансу.</li>
+          <li>📝 Ведіть список усіх витрат і доходів</li>
+          <li>📊 Використовуйте правило 50/30/20 для розподілу бюджету</li>
+          <li>🎯 Визначте пріоритетні фінансові цілі</li>
+          <li>💳 Відстежуйте підписки та регулярні платежі</li>
         </ul>
-        <p>Цей підхід допомагає уникнути боргів та накопичувати капітал.</p>
+        <p>Бюджет — це інструмент, який дає свободу та впевненість у фінансах.</p>
       </article>
     </main>
   </div>
