--- a/article3.html
+++ b/article3.html
@@ -15,13 +15,14 @@
     <main>
       <article>
         <img src="https://images.unsplash.com/photo-1581092580497-e0d23cbdf1dc" alt="Інвестування">
-        <p>Інвестування — один з найкращих способів зберегти та примножити капітал. Головне — почати з малого та мінімізувати ризики.</p>
+        <p>Інвестування — ключ до створення пасивного доходу та фінансової стабільності. Почати можна навіть з невеликих сум.</p>
         <ul>
-          <li>📖 Вивчайте інструменти інвестування.</li>
-          <li>💵 Починайте з малих сум.</li>
-          <li>📊 Диверсифікуйте портфель.</li>
+          <li>📖 Вивчайте ринок та інструменти інвестування</li>
+          <li>💵 Починайте з малих інвестицій для зниження ризиків</li>
+          <li>📈 Диверсифікуйте інвестиційний портфель</li>
+          <li>⏳ Думайте довгостроково, а не про швидкий прибуток</li>
         </ul>
-        <p>Правильні інвестиції формують фінансову незалежність.</p>
+        <p>Інвестування — це інструмент збереження та примноження капіталу, який доступний кожному.</p>
       </article>
     </main>
   </div>
