--- a/article4.html
+++ b/article4.html
@@ -3,24 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Створення фінансової подушки</title>
+  <title>Фінансова подушка</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>Створення фінансової подушки</h1>
+      <h1>Фінансова подушка</h1>
       <nav><a href="index.html">🏠 На головну</a></nav>
     </header>
     <main>
       <article>
         <img src="https://images.unsplash.com/photo-1581091012184-5c1d4b0f3b9f" alt="Фінансова подушка">
-        <p>Фінансова подушка — це резерв на випадок непередбачуваних ситуацій. Вона допомагає уникнути стресу під час фінансових труднощів.</p>
+        <p>Фінансова подушка — це резерв коштів на випадок непередбачуваних ситуацій, який дає спокій та впевненість.</p>
         <ul>
-          <li>💰 Відкладай мінімум 10% від доходу.</li>
-          <li>🏦 Зберігай гроші окремо.</li>
-          <li>📅 Мета: накопичити суму на 3-6 місяців витрат.</li>
+          <li>💵 Відкладайте мінімум 10% доходу щомісяця</li>
+          <li>🏦 Тримайте гроші на окремому рахунку</li>
+          <li>📆 Мета — накопичити суму на 3-6 місяців життя</li>
+          <li>🔒 Зберігайте подушку в надійному банку чи інструменті</li>
         </ul>
+        <p>Фінансова подушка — ваш головний захист у кризових обставинах.</p>
       </article>
     </main>
   </div>
