--- a/article5.html
+++ b/article5.html
@@ -14,13 +14,15 @@
     </header>
     <main>
       <article>
-        <img src="https://images.unsplash.com/photo-1581091012184-5c1d4b0f3b9f" alt="Економія грошей">
-        <p>Економія грошей — це не обмеження, а грамотне використання ресурсів для фінансової свободи.</p>
+        <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5" alt="Економія грошей">
+        <p>Економія — це не про відмови, а про раціональне використання грошей і можливостей для заощадження.</p>
         <ul>
-          <li>🛒 Купуй лише необхідне.</li>
-          <li>📝 Плануй покупки заздалегідь.</li>
-          <li>💳 Використовуй кешбек і знижки.</li>
+          <li>🛒 Купуйте тільки необхідне та плануйте покупки</li>
+          <li>📅 Слідкуйте за акціями та знижками</li>
+          <li>🍳 Готуйте вдома — це дешевше та корисніше</li>
+          <li>💡 Скоротіть комунальні витрати через енергоефективність</li>
         </ul>
+        <p>Правильна економія дозволяє жити комфортно та мати більше грошей для цілей і відпочинку.</p>
       </article>
     </main>
   </div>
