--- a/index.html
+++ b/index.html
@@ -7,53 +7,51 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <header>
-      <h1>Фінансовий блог</h1>
-      <p>Поради про фінанси, інвестиції, економію та стабільність</p>
-    </header>
-    <section class="cards">
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5" alt="Фінансова грамотність">
-        <div class="card-content">
-          <h2>Фінансова грамотність</h2>
-          <p>Дізнайтеся, як працюють гроші, щоб жити впевнено та вільно.</p>
-          <a href="article1.html">Читати</a>
-        </div>
-      </div>
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1553729459-efe14ef6055d" alt="Планування бюджету">
-        <div class="card-content">
-          <h2>Як планувати бюджет</h2>
-          <p>Розподіляйте витрати та створюйте фінансову дисципліну.</p>
-          <a href="article2.html">Читати</a>
-        </div>
-      </div>
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1581092580497-e0d23cbdf1dc" alt="Інвестування">
-        <div class="card-content">
-          <h2>Інвестування для початківців</h2>
-          <p>Почніть інвестувати без великих ризиків.</p>
-          <a href="article3.html">Читати</a>
-        </div>
-      </div>
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1581091012184-5c1d4b0f3b9f" alt="Фінансова подушка">
-        <div class="card-content">
-          <h2>Фінансова подушка</h2>
-          <p>Стратегія фінансового захисту для будь-кого.</p>
-          <a href="article4.html">Читати</a>
-        </div>
-      </div>
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5" alt="Економія грошей">
-        <div class="card-content">
-          <h2>Топ поради для економії</h2>
-          <p>Лайфхаки для економії без втрати якості життя.</p>
-          <a href="article5.html">Читати</a>
-        </div>
-      </div>
-    </section>
-  </div>
+  <header>
+    <h1>Фінансовий блог</h1>
+    <p>Поради про фінанси, інвестиції, економію та стабільність</p>
+  </header>
+
+  <main class="cards">
+    <!-- Фінансова грамотність -->
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1580519542036-c47de6196ba5?auto=format&fit=crop&w=800&q=80" alt="Фінансова грамотність">
+      <h2>Фінансова грамотність</h2>
+      <p>Розберіться, як працюють гроші, щоб жити впевнено та вільно.</p>
+      <a href="article1.html" class="btn">Читати</a>
+    </div>
+
+    <!-- Як планувати бюджет ефективно -->
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5?auto=format&fit=crop&w=800&q=80" alt="Планування бюджету">
+      <h2>Як планувати бюджет ефективно</h2>
+      <p>Дізнайтеся, як правильно розподіляти витрати та створити фінансову дисципліну.</p>
+      <a href="article2.html" class="btn">Читати</a>
+    </div>
+
+    <!-- Інвестування для початківців -->
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?auto=format&fit=crop&w=800&q=80" alt="Інвестування">
+      <h2>Інвестування для початківців</h2>
+      <p>Дізнайтеся, як інвестувати без великих ризиків.</p>
+      <a href="article3.html" class="btn">Читати</a>
+    </div>
+
+    <!-- Фінансова подушка -->
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5?auto=format&fit=crop&w=800&q=80" alt="Фінансова подушка">
+      <h2>Фінансова подушка</h2>
+      <p>Стратегія фінансового захисту для будь-кого.</p>
+      <a href="article4.html" class="btn">Читати</a>
+    </div>
+
+    <!-- Топ поради для економії грошей -->
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1600880292089-90a7e086ee0c?auto=format&fit=crop&w=800&q=80" alt="Економія грошей">
+      <h2>Топ поради для економії грошей</h2>
+      <p>Лайфхаки, як зекономити гроші і не втратити якість життя.</p>
+      <a href="article5.html" class="btn">Читати</a>
+    </div>
+  </main>
 </body>
 </html>
